<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/milkyWhite">

  <androidx.core.widget.NestedScrollView
    android:id="@+id/svShopListContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/cvFinalizeShop"
    android:layout_below="@id/cvTotalShopPrice"
    android:visibility="invisible">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShoppingBasket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        tools:listitem="@layout/row_shopping_basket" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtShoppingBasketSuggestionsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iran_sans_bold"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/might_like_following_products"
        android:textSize="18dp" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShoppingBasketSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="16dp"
        tools:listitem="@layout/row_shopping_basket" />

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/txtBasketIsEmpty"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:text="@string/your_shopping_basket_is_empty"
    android:textColor="@color/lightGray"
    android:textSize="22dp"
    android:textStyle="italic"
    android:visibility="gone" />

  <androidx.cardview.widget.CardView
    android:id="@+id/cvFinalizeShop"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_alignParentBottom="true"
    android:background="@color/primaryGreen"
    android:visibility="invisible">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:layout_gravity="center_horizontal"
      android:background="@color/primaryGreen"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="8dp">

      <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgFinalizeShopIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/ic_navigation_next_white" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtFinalizeShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finilize_your_shop"
        android:textColor="@color/pureWhite"
        android:textSize="20dp" />
    </LinearLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/cvTotalShopPrice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/abAppBar"
    android:visibility="invisible">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTomanGreenTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:paddingStart="9dp"
        android:paddingTop="9dp"
        android:paddingEnd="2dp"
        android:paddingBottom="9dp"
        android:text="@string/toman"
        android:textColor="@color/primaryGreen"
        android:textSize="20dp" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTotalShopPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/txtTomanGreenTotalPrice"
        android:paddingStart="2dp"
        android:paddingTop="9dp"
        android:paddingEnd="9dp"
        android:paddingBottom="9dp"
        android:text="1,564,000"
        android:textColor="@color/primaryGreen"
        android:textSize="20dp" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTotalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/txtTotalPriceText"
        android:padding="9dp"
        android:text="@string/sum_of_shop"
        android:textColor="@color/primaryGreen"
        android:textSize="20dp" />
    </RelativeLayout>
  </androidx.cardview.widget.CardView>

  <com.victor.loading.rotate.RotateLoading
    android:id="@+id/prgShoppingBasketLoading"
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:layout_centerInParent="true"
    app:loading_color="@color/colorPrimary"
    app:loading_width="3dp" />

  <include
    layout="@layout/layout_shopping_basket_toolabr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true" />

</RelativeLayout>